--- a/index.html
+++ b/index.html
@@ -74,16 +74,8 @@
             <img src="assets/images/M_Section1/icons-logo-pos-600w.png" />
             <h1>On the hunt on Easter Treats?</h1>
             <h3>Make Easter more amazing with LEGO gift</h3>
-            <a href="#">Shop now <svg width="10" height="13" viewBox="0 0 18 28" aria-hidden="true"
-                xmlns="http://www.w3.org/2000/svg"
-                class="Icon__StyledSVG-lm07h6-0 gxbFIO Chevronstyles__ChevronIcon-sc-1qql32m-0 cEWHhy CardContentstyles__StyledChevron-sc-18sd0hf-13 esQNuC">
-                <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path>
-              </svg></a>
-            <a href="#">Learn more <svg width="10" height="13" viewBox="0 0 18 28" aria-hidden="true"
-                xmlns="http://www.w3.org/2000/svg"
-                class="Icon__StyledSVG-lm07h6-0 gxbFIO Chevronstyles__ChevronIcon-sc-1qql32m-0 cEWHhy CardContentstyles__StyledChevron-sc-18sd0hf-13 esQNuC">
-                <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path>
-              </svg></a>
+            <a href="#">Shop now <span class="freccia-s1">&#10095;</span></a>
+            <a href="#">Learn more <span class="freccia-s1">&#10095;</span></a>
           </div>
         </div>
         <div class="background_main1">
