--- a/index.html
+++ b/index.html
@@ -805,22 +805,22 @@
     <footer>
       <section class="f_section1">
         <div class="container-footer1">
-          <p>The amazing home of LEGO building toys, <a href="https://www.lego.com/en-gb/gifts"> gifts</a>, stunning
+          <p>The amazing home of LEGO building toys, <a href="https://www.lego.com/en-gb/gifts" class="link-f1"> gifts</a>, stunning
             display
-            sets and more for <a href="https://www.lego.com/en-gb/categories/age">kids </a> and adults alike. Find the
+            sets and more for <a href="https://www.lego.com/en-gb/categories/age" class="link-f1">kids </a> and adults alike. Find the
             perfect
-            gift for toddlers, kids, teens and adults for<a href="https://www.lego.com/en-gb/gifts/birthday-gifts">
+            gift for toddlers, kids, teens and adults for<a href="https://www.lego.com/en-gb/gifts/birthday-gifts" class="link-f1">
               birthdays</a> or other occasions such as<a
-              href="https://www.lego.com/en-gb/valentines-day/gifts">Valentine's Day
-            </a> , <a href="https://www.lego.com/en-gb/mothers-day-gift-ideas">Mother's Day </a> and <a
-              href="https://www.lego.com/en-gb/fathers-day/gift-ideas">Father's Day </a>. We make it easy to shop for
+              href="https://www.lego.com/en-gb/valentines-day/gifts" class="link-f1"> Valentine's Day
+            </a> , <a href="https://www.lego.com/en-gb/mothers-day-gift-ideas" class="link-f1">Mother's Day </a> and <a
+              href="https://www.lego.com/en-gb/fathers-day/gift-ideas" class="link-f1">Father's Day </a>. We make it easy to shop for
             toys that
             will provide hours of fun and imaginative play. You’ll also find curated <a
-              href="https://www.lego.com/en-gb/categories/adults-welcome">LEGO sets for adults </a> perfectly matching
-            their <a href="https://www.lego.com/en-gb/categories/interests">interests </a>, such as<a
-              href="https://www.lego.com/en-gb/categories/cars">cars </a> , <a
-              href="https://www.lego.com/en-gb/themes/adults-welcome/botanical-collection/artificial-flowers">flowers
-            </a> , <a href="https://www.lego.com/en-gb/categories/gaming">gaming </a> and much more!</p>
+              href="https://www.lego.com/en-gb/categories/adults-welcome" class="link-f1">LEGO sets for adults </a> perfectly matching
+            their <a href="https://www.lego.com/en-gb/categories/interests" class="link-f1">interests </a>, such as<a
+              href="https://www.lego.com/en-gb/categories/cars" class="link-f1"> cars </a> , <a
+              href="https://www.lego.com/en-gb/themes/adults-welcome/botanical-collection/artificial-flowers" class="link-f1">flowers
+            </a> , <a href="https://www.lego.com/en-gb/categories/gaming" class="link-f1">gaming </a> and much more!</p>
         </div>
       </section>
 
@@ -857,21 +857,21 @@
                     d="M8.303.89c2.065 0 3.92.818 5.258 2.156a7.391 7.391 0 012.156 5.257c0 4.906-5.485 11.795-7.414 14.066C6.373 20.097.89 13.21.89 8.303c0-2.065.818-3.92 2.156-5.257A7.391 7.391 0 018.303.89zm0 3.558a3.84 3.84 0 00-2.734 1.12 3.84 3.84 0 00-1.12 2.735 3.84 3.84 0 001.12 2.735 3.84 3.84 0 002.734 1.12 3.84 3.84 0 002.735-1.12 3.84 3.84 0 001.12-2.735 3.84 3.84 0 00-1.12-2.734 3.84 3.84 0 00-2.735-1.12z"
                     stroke="currentColor" stroke-width="1.779" fill="none"></path>
                 </svg>
-                <button type="button" class="button-f2">United Kingdom</button>
+                <a href="#"><button type="button" class="button-f2">United Kingdom</button></a>
               </div>
             </div>
             <div class="box1-iper">
               <div class="link-logo-f2">
-                <a href="#" class="link-f2">Gift Cards</a>
+                <a href="#" class="link-f2 li-f2-link">Gift Cards</a>
               </div>
               <div class="link-logo-f2">
-                <a href="#" class="link-f2">Find inspiration</a>
+                <a href="#" class="link-f2 li-f2-link">Find inspiration</a>
               </div>
               <div class="link-logo-f2">
-                <a href="#" class="link-f2">LEGO Catalogues</a>
+                <a href="#" class="link-f2 li-f2-link">LEGO Catalogues</a>
               </div>
               <div class="link-logo-f2">
-                <a href="#" class="link-f2">Find a LEGO Store</a>
+                <a href="#" class="link-f2 li-f2-link">Find a LEGO Store</a>
               </div>
             </div>
           </div>
@@ -879,45 +879,46 @@
             <div class="box2-ul">
               <h3>ABOUT US</h3>
               <ul class="li-f2">
-                <li>About the LEGO Group</li>
-                <li>LEGO® news</li>
-                <li>Sustainability</li>
-                <li>Supply chain transparency statement</li>
-                <li>LEGO product certification</li>
-                <li>LEGO Jobs</li>
-                <li>LEGO Compliance Line</li>
+                <li><a href="#" class="li-f2-link">About the LEGO Group</a></li>
+                <li><a href="#" class="li-f2-link">LEGO® news</a></li>
+                <li><a href="#" class="li-f2-link">Sustainability</a></li>
+                <li><a href="#" class="li-f2-link">Sustainability</a></li>
+                <li><a href="#" class="li-f2-link">Supply chain transparency statement</a></li>
+                <li><a href="#" class="li-f2-link">LEGO product certification</a></li>
+                <li><a href="#" class="li-f2-link">LEGO Jobs</a></li>
+                <li><a href="#" class="li-f2-link">LEGO Compliance Line</a></li>
               </ul>
             </div>
             <div class="box2-ul">
               <h3>SUPPORT</h3>
               <ul class="li-f2">
-                <li>Contact us</li>
-                <li>Find building instructions</li>
-                <li>Replacement parts</li>
-                <li>Deliveries and returns</li>
-                <li>Payment methods</li>
-                <li>Terms & Conditions</li>
-                <li>Product recalls</li>
+                <li><a href="#" class="li-f2-link">Contact us</a></li>
+                <li><a href="#" class="li-f2-link">Find building instructions</a></li>
+                <li><a href="#" class="li-f2-link">Replacement parts</a></li>
+                <li><a href="#" class="li-f2-link">Deliveries and returns</a></li>
+                <li><a href="#" class="li-f2-link">Payment methods</a></li>
+                <li><a href="#" class="li-f2-link">Terms & Conditions</a></li>
+                <li><a href="#" class="li-f2-link">Product recalls</a></li>
               </ul>
             </div>
             <div class="box2-ul">
               <h3>ATTRACTIONS</h3>
               <ul class="li-f2">
-                <li>LEGO® House</li>
-                <li>LEGOLAND® Parks</li>
-                <li>LEGOLAND Discovery Centers</li>
+                <li><a href="#" class="li-f2-link">LEGO® House</a></li>
+                <li><a href="#" class="li-f2-link">LEGOLAND® Parks</a></li>
+                <li><a href="#" class="li-f2-link">LEGOLAND Discovery Centers</a></li>
               </ul>
             </div>
             <div class="box2-ul">
               <h3>MORE FROM US</h3>
               <ul class="li-f2">
-                <li>LEGO® LIFE</li>
-                <li>LEGO Education</li>
-                <li>LEGO Ideas</li>
-                <li>LEGO Foundation</li>
-                <li>Affiliate Program</li>
-                <li>Student Offers</li>
-                <li>LEGO Braille Bricks</li>
+                <li><a href="#" class="li-f2-link">LEGO® LIFE</a></li>
+                <li><a href="#" class="li-f2-link">LEGO Education</a></li>
+                <li><a href="#" class="li-f2-link">LEGO Ideas</a></li>
+                <li><a href="#" class="li-f2-link">LEGO Foundation</a></li>
+                <li><a href="#" class="li-f2-link">Affiliate Program</a></li>
+                <li><a href="#" class="li-f2-link">Student Offers</a></li>
+                <li><a href="#" class="li-f2-link">LEGO Braille Bricks</a></li>
               </ul>
             </div>
           </div>
@@ -940,31 +941,31 @@
               <h3>FOLLOW US</h3>
               <div class="svg-social-f2">
                 <div class="social-f2">
-                  <svg width="40" height="40" viewBox="0 0 40 40" version="1.1" xmlns="http://www.w3.org/2000/svg"
-                    xmlns:xlink="http://www.w3.org/1999/xlink">
-                    <title>FB09927C-DF4F-4FBA-BFBC-131DB517F427</title>
-                    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                      <g transform="translate(-727.000000, -702.000000)">
-                        <g transform="translate(59.000000, 285.000000)">
-                          <g transform="translate(668.000000, 363.000000)">
-                            <g transform="translate(0.000000, 54.000000)">
-                              <circle fill="#121029" cx="20" cy="20" r="20"></circle>
-                              <g transform="translate(15.000000, 10.000000)" fill="#FFFFFF" fill-rule="nonzero">
-                                <g>
-                                  <path
-                                    d="M10,0.131315226 C9.74025974,0.131315226 8.57142857,0 7.4025974,0 C4.80519481,0 2.98701299,1.57578271 2.98701299,4.5960329 L2.98701299,7.09102219 L0,7.09102219 L0,10.5052181 L2.98701299,10.5052181 L2.98701299,19.4346534 L6.49350649,19.4346534 L6.49350649,10.5052181 L9.48051948,10.5052181 L9.87012987,7.09102219 L6.49350649,7.09102219 L6.49350649,4.85866335 C6.49350649,3.80814154 6.75324675,3.15156542 8.18181818,3.15156542 L10,3.15156542 C10,3.15156542 10,0.131315226 10,0.131315226 Z">
-                                  </path>
-                                </g>
+                 <a href="#"><svg width="40" height="40" viewBox="0 0 40 40" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink">
+                  <title>FB09927C-DF4F-4FBA-BFBC-131DB517F427</title>
+                  <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                    <g transform="translate(-727.000000, -702.000000)">
+                      <g transform="translate(59.000000, 285.000000)">
+                        <g transform="translate(668.000000, 363.000000)">
+                          <g transform="translate(0.000000, 54.000000)">
+                            <circle fill="#121029" cx="20" cy="20" r="20"></circle>
+                            <g transform="translate(15.000000, 10.000000)" fill="#FFFFFF" fill-rule="nonzero">
+                              <g>
+                                <path
+                                  d="M10,0.131315226 C9.74025974,0.131315226 8.57142857,0 7.4025974,0 C4.80519481,0 2.98701299,1.57578271 2.98701299,4.5960329 L2.98701299,7.09102219 L0,7.09102219 L0,10.5052181 L2.98701299,10.5052181 L2.98701299,19.4346534 L6.49350649,19.4346534 L6.49350649,10.5052181 L9.48051948,10.5052181 L9.87012987,7.09102219 L6.49350649,7.09102219 L6.49350649,4.85866335 C6.49350649,3.80814154 6.75324675,3.15156542 8.18181818,3.15156542 L10,3.15156542 C10,3.15156542 10,0.131315226 10,0.131315226 Z">
+                                </path>
                               </g>
                             </g>
                           </g>
                         </g>
                       </g>
                     </g>
-                  </svg>
+                  </g>
+                </svg></a> 
                 </div>
                 <div class="social-f2">
-                  <svg width="40" height="40" viewBox="0 0 40 40" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                  <a href="#"><svg width="40" height="40" viewBox="0 0 40 40" version="1.1" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink">
                     <title>AF33F512-1539-4BCD-A9EB-85BF54B01CD0</title>
                     <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -983,19 +984,19 @@
                         </g>
                       </g>
                     </g>
-                  </svg>
+                  </svg></a>
                 </div>
                 <div class="social-f2">
-                  <svg width="40" height="40" viewBox="0 0 1200 1227" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <a href="#"><svg width="40" height="40" viewBox="0 0 1200 1227" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <circle cx="50%" cy="50%" r="50%" fill="#121029" />
                     <g transform="translate(300 300), scale(0.5 0.5)">
                       <path fill="#fff"
                         d="M714.163 519.284L1160.89 0H1055.03L667.137 450.887L357.328 0H0L468.492 681.821L0 1226.37H105.866L515.491 750.218L842.672 1226.37H1200L714.137 519.284H714.163ZM569.165 687.828L521.697 619.934L144.011 79.6944H306.615L611.412 515.685L658.88 583.579L1055.08 1150.3H892.476L569.165 687.854V687.828Z" />
                     </g>
-                  </svg>
+                  </svg></a>
                 </div>
                 <div class="social-f2">
-                  <svg width="40" height="40" viewBox="0 0 40 40" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                  <a href="#"><svg width="40" height="40" viewBox="0 0 40 40" version="1.1" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink">
                     <title>5CB70A48-391F-4A36-B267-BF364C1656CD</title>
                     <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -1012,7 +1013,7 @@
                         </g>
                       </g>
                     </g>
-                  </svg>
+                  </svg></a>
                 </div>
               </div>
             </div>
@@ -1022,22 +1023,22 @@
     </section>
     <section class="f_section3">
       <div class="container-footer3">
-        <div class="element"><a href="https://www.lego.com/en-gb/legal/legal-notice/privacy-policy" class="link">Privacy
+        <div class="element"><a href="https://www.lego.com/en-gb/legal/legal-notice/privacy-policy" class="link-f3">Privacy
             Policy </a></div>
-        <div class="element"><a href="https://www.lego.com/en-gb/cookie-policy" class="link">Cookies </a> </div>
+        <div class="element"><a href="https://www.lego.com/en-gb/cookie-policy" class="link-f3">Cookies </a> </div>
         <div class="element"><a href="https://www.lego.com/en-gb/legal/notices-and-policies/legal-notice"
-            class="link">Legal
+            class="link-f3">Legal
             notice</a></div>
-        <div class="element"><a href="https://www.lego.com/en-gb/legal/legal-notice" class="link">Terms of Use </a>
+        <div class="element"><a href="https://www.lego.com/en-gb/legal/legal-notice" class="link-f3">Terms of Use </a>
         </div>
-        <div class="element"><a href="https://www.lego.com/en-gb/campaigns/digital-wellbeing" class="link">Digital
+        <div class="element"><a href="https://www.lego.com/en-gb/campaigns/digital-wellbeing" class="link-f3">Digital
             wellbeing
           </a></div>
-        <div class="element"><a href="https://www.lego.com/en-gb/page/accessibility" class="link">Accessibility </a>
+        <div class="element"><a href="https://www.lego.com/en-gb/page/accessibility" class="link-f3">Accessibility </a>
         </div>
         <div class="element"><a
             href="https://www.lego.com/en-gb?CMP=AFC-AffiliateUK-a1LgFw09t88-2126220-1388341-10&consent-modal=show"
-            class="link">Cookie Settings </a></div>
+            class="link-f3">Cookie Settings </a></div>
       </div>
 
       <div class="testo">
