--- a/index.html
+++ b/index.html
@@ -18,53 +18,204 @@
 <body>
 
   <header>
-    <nav id="high_bar">
-      <button id="btn_back">Go Back</button>
-      <button id="arw_back">
-        < </button>
-          <div id="high_msg">MAR10 Day Sale <a href="section_1_test.html">Shop now</a> </div>
-          <button id="arw_forward">></button>
-    </nav>
-    <nav id="menu">
-
-      <section id="menu_words">
-        <img src="assets/images/logo-lego.svg" width="54px" alt="logo">
-        <a href="#">ACQUISTA</a>
-        <a href="#">SCOPRI</a>
-        <a href="#">AIUTO</a>
-      </section>
-      <section id="menu_icons">
-        <a href="#">
-          <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" aria-hidden="true"
-            class="Icon__StyledSVG-lm07h6-0 dHKzVM">
-            <path
-              d="M18 16.615c0 .375-.137.7-.412.973a1.331 1.331 0 01-.973.412 1.28 1.28 0 01-.973-.412l-3.71-3.7a7.41 7.41 0 01-4.317 1.342c-1.03 0-2.017-.2-2.958-.6a7.616 7.616 0 01-2.434-1.623 7.605 7.605 0 01-1.622-2.433A7.472 7.472 0 010 7.616c0-1.032.2-2.018.6-2.96a7.65 7.65 0 011.623-2.433A7.616 7.616 0 014.657.601 7.49 7.49 0 017.615 0c1.032 0 2.018.2 2.959.601.94.4 1.752.941 2.434 1.622a7.624 7.624 0 011.622 2.434c.4.941.601 1.927.601 2.959a7.403 7.403 0 01-1.342 4.316l3.71 3.71c.267.266.401.592.401.973m-5.539-9c0-1.334-.474-2.475-1.423-3.423C10.09 3.244 8.95 2.77 7.615 2.77c-1.333 0-2.475.474-3.423 1.422C3.243 5.14 2.77 6.28 2.77 7.616c0 1.334.474 2.475 1.423 3.423.948.949 2.09 1.422 3.423 1.422 1.335 0 2.475-.473 3.423-1.422.95-.948 1.423-2.09 1.423-3.423"
-              fill="currentColor" fill-rule="evenodd"></path>
-          </svg>
-        </a>
-        <a href="#">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="18" viewBox="0 0 20 18" aria-hidden="true"
-            class="Icon__StyledSVG-lm07h6-0 cOQBZK">
-            <path
-              d="M16.84 8.417L10 15.204 3.16 8.417A3.67 3.67 0 012 5.739C2 3.677 3.71 2 5.815 2a3.82 3.82 0 012.754 1.159l1.43 1.467 1.433-1.467A3.818 3.818 0 0114.186 2C16.289 2 18 3.677 18 5.739a3.673 3.673 0 01-1.16 2.678M9.986 18l.014-.014.014.014 8.223-8.116-.018-.019a5.678 5.678 0 001.78-4.126C20 2.569 17.398 0 14.187 0A5.829 5.829 0 0010 1.762 5.827 5.827 0 005.815 0C2.604 0 0 2.569 0 5.739a5.68 5.68 0 001.782 4.126"
-              fill="currentColor" fill-rule="evenodd"></path>
-          </svg>
-        </a>
-        <a href="#">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" viewBox="0 0 16 20" aria-hidden="true"
-            class="Icon__StyledSVG-lm07h6-0 uCSzk MainBarstyles__ActionIcon-sc-1cg7sjw-16 kfAPxF">
-            <g fill="currentColor" fill-rule="evenodd">
+    <section class="navbar-container-general">
+      <div class="navbar">
+        <div class="area-giochi">
+          <a href="https://kids.lego.com/it-it/play" class="button-area-giochi"
+            ><span>&#8592;</span> Area giochi</a
+          >
+        </div>
+        <div class="mar10-button-lr">
+          <div class="l-btn-nav-controls">
+            <a class="l-btn-nav btn">&#10094;</a>
+          </div>
+          <div class="mar10">
+            <span class="mar10-day-sale">MAR10 Day Sale</span>
+            <a href="#" class="mar10-shop-now">Shop now</a>
+          </div>
+          <div class="r-btn-nav-controls">
+            <a class="r-btn-nav btn">&#10095;</a>
+          </div>
+        </div>
+        <div class="sign-in-box">
+          <div class="sign-in">
+            <div class="img-sign-in">
+              <svg
+                width="20"
+                height="22"
+                viewBox="0 0 20 22"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                class="Icon__StyledSVG-lm07h6-0 cnHyRF UtilityBarstyles__AccountIcon-sc-1uwh8t8-5 KHcEY"
+              >
+                <g transform="translate(1 1)" fill-rule="nonzero" fill="none">
+                  <rect
+                    stroke="#2C2C2C"
+                    stroke-width="1.5"
+                    fill="#FFCF00"
+                    x="4.875"
+                    width="8.25"
+                    height="6.038"
+                    rx=".729"
+                  ></rect>
+                  <rect
+                    stroke="#2C2C2C"
+                    stroke-width="1.2"
+                    fill="#FFCF00"
+                    x="3.75"
+                    y="14.34"
+                    width="10.5"
+                    height="5.66"
+                    rx=".729"
+                  ></rect>
+                  <path
+                    d="M14.25 17.736H3.75C0 17.736 0 14.717 0 14.717v-8.68S0 3.02 3.75 3.02h10.5C18 3.019 18 6.038 18 6.038v8.679s0 3.019-3.75 3.019z"
+                    stroke="#2C2C2C"
+                    stroke-width="1.5"
+                    fill="#FFCF00"
+                  ></path>
+                  <path
+                    d="M7.125 8.868a.94.94 0 00-.938-.943.94.94 0 00-.937.943c0 .52.42.943.938.943a.94.94 0 00.937-.943zm4.688-.943a.94.94 0 00-.938.943c0 .52.42.943.938.943a.94.94 0 00.937-.943.94.94 0 00-.938-.943zm.293 3.86a.452.452 0 00-.649.21c-.005.008-.461.84-2.463.84-1.953 0-2.437-.793-2.462-.84a.446.446 0 00-.638-.234.618.618 0 00-.215.761c.063.147.69 1.446 3.315 1.446s3.25-1.299 3.313-1.446a.609.609 0 00-.201-.738z"
+                    fill="#2C2C2C"
+                  ></path>
+                </g>
+              </svg>
+            </div>
+            <div class="sign-in-text">
+              <a href="#" class="sign-in-link-style">Sign in</a>
+            </div>
+            <div class="sign-in-divisor">
+              <span class="sign-in-span2">|</span>
+            </div>
+          </div>
+          <div class="sign-in-join">
+            <svg
+              width="20"
+              height="22"
+              viewBox="0 0 40 40"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
               <path
-                d="M4 3.512v5.804c0 .377.349.684.779.684.43 0 .779-.307.779-.684V3.512C5.558 2.33 6.653 1.368 8 1.368c1.347 0 2.442.962 2.442 2.144v5.804c0 .377.35.684.78.684.43 0 .778-.307.778-.684V3.512C12 1.575 10.206 0 8 0S4 1.575 4 3.512z">
-              </path>
+                d="M1 16.2592H8.12587V9.95541C8.12587 8.8478 9.01485 8 10.1437 8H29.8422C30.9851 8 31.86 8.86147 31.86 9.95541V16.2592H39V31H1V16.2592Z"
+                fill="#00A3DA"
+              />
+            </svg>
+            <a href="#" class="sign-in-link-style">Join LEGO® Insiders</a>
+          </div>
+        </div>
+      </div>
+      <div class="menu">
+        <div class="menu-logo-links">
+          <div class="menu-logo">
+            <a href="index.html"><svg
+              height="55"
+              width="55"
+              viewBox="0 0 180 180"
+              fill="currentColor"
+              xmlns="http://www.w3.org/2000/svg"
+            >
               <path
-                d="M2.46 6.33c-.269 0-.489.194-.5.441L1.435 18.19a.436.436 0 00.131.332.52.52 0 00.348.149h12.151c.276 0 .501-.207.501-.462l-.525-11.436c-.011-.248-.23-.442-.5-.442H2.46zM14.448 20l-12.974-.001a1.591 1.591 0 01-1.064-.462 1.357 1.357 0 01-.408-1.03L.56 6.372C.595 5.602 1.277 5 2.11 5h11.78c.835 0 1.516.602 1.551 1.372l.56 12.197c0 .789-.697 1.431-1.553 1.431z">
-              </path>
-            </g>
-          </svg>
-        </a>
-      </section>
-    </nav>
+                d="M1.223 1.204V178.8H178.82l-.001-177.596H1.223Z"
+                fill="#fff"
+              />
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M1.223 178.8V1.204h177.595l.001 177.596H1.223Zm162.171-86.743c1.555-4.606 3.316-11.5 3.606-17.033.221-4.174-.341-10.02-4.278-14.174-3.141-3.319-7.94-4.994-14.264-4.994-7.989 0-14.426 2.82-19.136 8.397l-1.243 1.466-.826-1.734c-.674-1.413-1.156-1.992-1.89-2.82-3.219-3.642-8.617-5.488-16.044-5.487-6.804 0-12.95 2.039-17.308 5.742l-1.103.937-.76-1.237c-2.058-3.345-7.188-5.51-13.065-5.51-8.456.002-16.988 1.15-22.135 9.447l-2.133 3.424-.167-4.033c-.13-3.12-.415-4.416-1.866-5.952-1.596-1.693-4.282-2.516-8.21-2.513-5.768 0-10.103 2.515-13.256 7.694-4.853 7.752-16.583 33.25-16.324 45.369.17 7.865 5.418 12.679 14.043 12.878 7.108.172 12.758-1.652 16.347-5.274l.916-.926.88.952c3.226 3.502 8.13 5.432 13.811 5.432 7.234 0 13.42-2.248 16.973-6.171l.97-1.069.912 1.121c3.326 4.086 8.466 6.228 14.863 6.202 8.343-.037 16.135-3.871 21.376-10.512l1.374-1.741.767 2.083c3.23 8.783 11.984 10.092 16.921 10.095 16.765 0 24.005-11.503 30.249-30.059Z"
+                fill="#FFED00"
+              />
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M1.223 178.8V1.204h177.595l.001 177.596H1.223Zm163.283-73.742c2.321-4.784 6.688-16.757 7.495-23.222l.009-.071c.984-7.892 1.915-15.36-3.41-22.781-3.786-5.274-10.237-8.813-20.052-8.814-7.419 0-14.045 2.01-19.343 6.416-4.537-4.49-11.044-6.528-19.802-6.526-6.853 0-12.605 1.567-17.614 4.574-3.636-2.889-7.904-4.694-14.704-4.694-6.164-.001-14.818.32-21.347 5.863-1.509-3.079-4.577-5.497-13.04-5.497-7.796 0-14.156 3.688-18.327 10.535-5.569 8.895-17.39 34.582-17.088 48.614.225 10.563 8.146 17.84 19.62 18.113 6.895.161 12.767-1.315 17.248-4.289 4.052 2.92 9.23 4.497 14.984 4.497 6.886.001 13.098-1.807 17.704-5.053 4.173 3.308 9.648 5.096 15.842 5.096 8.036.003 15.503-2.772 21.535-8.051 4.114 5.246 11.162 7.973 19.721 7.974 16.023.001 24.346-9.854 30.569-22.684Z"
+                fill="#E3000B"
+              />
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M0 180V0h180l-.003 179.997L0 180Zm177.52-2.479.002-175.043H2.476L2.48 177.52h175.04Z"
+              />
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M167.615 54.301a4.305 4.305 0 0 1 4.309-4.313 4.307 4.307 0 0 1 4.315 4.313 4.304 4.304 0 0 1-4.315 4.312 4.302 4.302 0 0 1-4.309-4.312Zm4.311-3.457c1.918.001 3.477 1.545 3.472 3.463.005 1.918-1.56 3.467-3.472 3.467a3.458 3.458 0 0 1-3.453-3.467 3.448 3.448 0 0 1 3.453-3.463Zm1.679 4.81.515.9-1.117.007-.357-.73a3.643 3.643 0 0 0-.609-.874c-.176-.183-.337-.229-.734-.229l-.164.001-.002 1.83h-.921v-4.467h2.225c.959 0 1.409.535 1.409 1.243.002.675-.454 1.16-1.208 1.25l.002.025c.383.133.51.258.961 1.044Zm-2.469-2.868v1.227h.933c.624 0 .83-.304.821-.62 0-.394-.313-.61-.921-.61l-.833.003Zm-42.77 10.664c4.348-5.15 10.782-8.839 20.086-8.839 16.105 0 20.318 10.53 19.79 20.48-.313 5.98-2.232 13.104-3.666 17.365-6.37 18.931-14.02 30.902-31.43 30.9-7.945.002-15.216-3.098-18.081-10.908-5.233 6.622-13.231 10.944-22.35 10.989-6.97.034-12.39-2.429-15.835-6.66-4.09 4.514-11.011 6.581-17.89 6.583-6.18-.004-11.34-2.157-14.727-5.835-3.774 3.806-9.704 5.826-17.257 5.649-9.675-.232-15.08-6.037-15.258-14.095-.266-12.474 11.614-38.226 16.511-46.045 3.38-5.547 8.075-8.27 14.31-8.273 3.423.003 6.938.598 9.111 2.9 1.787 1.89 2.074 3.57 2.206 6.75 5.48-8.83 14.716-10.03 23.19-10.028 6.484 0 11.866 2.427 14.124 6.096 4.346-3.694 10.605-6.038 18.113-6.038 7.685.001 13.41 1.876 16.974 5.908.786.885 1.345 1.562 2.079 3.102ZM43.59 106.915c.286-3.016-1.973-6.273-10.986-4.709.895-2.005 2.226-4.753 3.737-7.873v-.001C41.183 84.334 47.874 70.519 48 65.114c.068-2.665-1.006-4.887-5.328-4.885-4.566-.002-7.43 1.908-9.776 5.762-5.088 8.125-15.893 32.635-15.666 43.229.128 6.056 4.823 8.446 10.04 8.568 7.19.167 15.472-1.852 16.321-10.874Zm18.35-13.03c-.6 1.614-1.728 4.994-2.639 8.571 2.958-.738 5.173-1.249 8.97-1.161 4.329.106 7.099 1.898 7.097 5.48 0 8.674-9.593 11.222-16.24 11.224-7.306 0-13.724-4.155-13.724-12.144 0-9.366 5.076-23.568 9.84-33.023 5.848-11.616 11.827-13.159 22.12-13.159 4.526 0 9.736 1.932 9.736 6.204 0 5.922-5.008 8.18-9.983 8.466-2.127.122-5.394.239-7.348.099 0 0-1.661 2.525-3.416 7.015 9.208-1.296 13.116.795 11.562 6.12-2.104 7.199-8.342 7.674-15.976 6.307Zm39.964-19.114c1.215-1.703 2.84-3.28 5.333-3.28 3.055 0 2.759 1.616 2.034 3.681-2.059 5.88 4.159 6.035 5.677 5.915 5.428-.423 8.419-3.93 9.155-9.904 1.008-8.134-5.845-11.257-14.532-11.257-14.48 0-20.164 8.856-25.586 21.516-2.547 5.947-5.755 16.11-5.754 22.582-.001 9.09 5.53 14.019 14.444 14.019 13.017 0 22.215-10.38 24.843-23.313.809-3.98 1.806-11.449-8.304-11.033-5.132.212-8.228 1.344-9.86 6.588-1.68 5.402 4.413 5.549 4.413 5.549-1.226 5.585-4.815 8.971-8.013 8.974-1.996 0-3.812-.866-3.204-5.09.903-6.176 6.687-21.198 9.354-24.947Zm60.017 7.407c-1.536 7.62-4.976 16.64-8.714 23.361-6.1 10.964-13.499 12.5-19.968 12.418-6.465-.077-13.754-2.461-13.809-12.439-.039-7.16 3.048-17.272 5.671-23.893 4.575-12.01 9.241-21.805 24.01-21.63 17.218.201 14.147 15.516 12.81 22.183Zm-21.598 19.537c2.394-4.055 9.133-22.448 9.317-27.047.054-1.34-.167-2.9-2.327-2.925-1.481-.021-2.769.266-3.927 2.055-2.602 3.382-10.219 24.185-10.09 28.335.047 1.492.88 2.795 2.712 2.795 2.11.002 3.279-1.45 4.315-3.213Z"
+              />
+            </svg></a>
+          </div>
+          <div class="menu-links-cnt">
+            <a href="#" class="menu-link hover-underline shop-link">SHOP</a>
+            <a href="#" class="menu-link hover-underline discover-link"
+              >DISCOVER</a
+            >
+            <a href="#" class="menu-link hover-underline help-link">HELP</a>
+            <a href="#" class="menu-link mday-link">MARIO DAY</a>
+          </div>
+        </div>
+        <div class="menu-search-shop">
+          <div class="menu-search">
+            <button class="search-logo">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="18"
+                height="18"
+                viewBox="0 0 18 18"
+                aria-hidden="true"
+                class="Icon__StyledSVG-lm07h6-0 dHKzVM"
+              >
+                <path
+                  d="M18 16.615c0 .375-.137.7-.412.973a1.331 1.331 0 01-.973.412 1.28 1.28 0 01-.973-.412l-3.71-3.7a7.41 7.41 0 01-4.317 1.342c-1.03 0-2.017-.2-2.958-.6a7.616 7.616 0 01-2.434-1.623 7.605 7.605 0 01-1.622-2.433A7.472 7.472 0 010 7.616c0-1.032.2-2.018.6-2.96a7.65 7.65 0 011.623-2.433A7.616 7.616 0 014.657.601 7.49 7.49 0 017.615 0c1.032 0 2.018.2 2.959.601.94.4 1.752.941 2.434 1.622a7.624 7.624 0 011.622 2.434c.4.941.601 1.927.601 2.959a7.403 7.403 0 01-1.342 4.316l3.71 3.71c.267.266.401.592.401.973m-5.539-9c0-1.334-.474-2.475-1.423-3.423C10.09 3.244 8.95 2.77 7.615 2.77c-1.333 0-2.475.474-3.423 1.422C3.243 5.14 2.77 6.28 2.77 7.616c0 1.334.474 2.475 1.423 3.423.948.949 2.09 1.422 3.423 1.422 1.335 0 2.475-.473 3.423-1.422.95-.948 1.423-2.09 1.423-3.423"
+                  fill="currentColor"
+                  fill-rule="evenodd"
+                ></path>
+              </svg>
+            </button>
+          </div>
+          <div class="menu-heart">
+            <a href="#" class="heart-logo">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="20"
+                height="18"
+                viewBox="0 0 20 18"
+                aria-hidden="true"
+                class="Icon__StyledSVG-lm07h6-0 cOQBZK"
+              >
+                <path
+                  d="M16.84 8.417L10 15.204 3.16 8.417A3.67 3.67 0 012 5.739C2 3.677 3.71 2 5.815 2a3.82 3.82 0 012.754 1.159l1.43 1.467 1.433-1.467A3.818 3.818 0 0114.186 2C16.289 2 18 3.677 18 5.739a3.673 3.673 0 01-1.16 2.678M9.986 18l.014-.014.014.014 8.223-8.116-.018-.019a5.678 5.678 0 001.78-4.126C20 2.569 17.398 0 14.187 0A5.829 5.829 0 0010 1.762 5.827 5.827 0 005.815 0C2.604 0 0 2.569 0 5.739a5.68 5.68 0 001.782 4.126"
+                  fill="currentColor"
+                  fill-rule="evenodd"
+                ></path>
+              </svg>
+            </a>
+          </div>
+          <div class="menu-shop">
+            <a
+              aria-label="Il Mio Carrello"
+              data-test="util-bar-cart"
+              class="shop-logo"
+              href="#"
+              ><svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="20"
+                viewBox="0 0 16 20"
+                aria-hidden="true"
+                class="Icon__StyledSVG-lm07h6-0 uCSzk MainBarstyles__ActionIcon-sc-1cg7sjw-16 kfAPxF"
+              >
+                <g fill="currentColor" fill-rule="evenodd">
+                  <path
+                    d="M4 3.512v5.804c0 .377.349.684.779.684.43 0 .779-.307.779-.684V3.512C5.558 2.33 6.653 1.368 8 1.368c1.347 0 2.442.962 2.442 2.144v5.804c0 .377.35.684.78.684.43 0 .778-.307.778-.684V3.512C12 1.575 10.206 0 8 0S4 1.575 4 3.512z"
+                  ></path>
+                  <path
+                    d="M2.46 6.33c-.269 0-.489.194-.5.441L1.435 18.19a.436.436 0 00.131.332.52.52 0 00.348.149h12.151c.276 0 .501-.207.501-.462l-.525-11.436c-.011-.248-.23-.442-.5-.442H2.46zM14.448 20l-12.974-.001a1.591 1.591 0 01-1.064-.462 1.357 1.357 0 01-.408-1.03L.56 6.372C.595 5.602 1.277 5 2.11 5h11.78c.835 0 1.516.602 1.551 1.372l.56 12.197c0 .789-.697 1.431-1.553 1.431z"
+                  ></path>
+                </g></svg
+            ></a>
+          </div>
+        </div>
+      </div>
+    </section>
   </header>
   <div class="contenitore-generale">
     <main>
