--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@
           </div>
           <div class="sign-in-box">
             <div class="sign-in">
-              <div class="img-sign-in">
-                <svg width="20" height="22" viewBox="0 0 20 22" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+              <!-- <div class="img-sign-in"> 
+              </div> -->
+              <div class="sign-in-text">
+                <a href="#" class="sign-in-link-style"> <svg width="20" height="22" viewBox="0 0 20 22" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
                   class="Icon__StyledSVG-lm07h6-0 cnHyRF UtilityBarstyles__AccountIcon-sc-1uwh8t8-5 KHcEY">
                   <g transform="translate(1 1)" fill-rule="nonzero" fill="none">
                     <rect stroke="#2C2C2C" stroke-width="1.5" fill="#FFCF00" x="4.875" width="8.25" height="6.038"
@@ -56,10 +58,7 @@
                       d="M7.125 8.868a.94.94 0 00-.938-.943.94.94 0 00-.937.943c0 .52.42.943.938.943a.94.94 0 00.937-.943zm4.688-.943a.94.94 0 00-.938.943c0 .52.42.943.938.943a.94.94 0 00.937-.943.94.94 0 00-.938-.943zm.293 3.86a.452.452 0 00-.649.21c-.005.008-.461.84-2.463.84-1.953 0-2.437-.793-2.462-.84a.446.446 0 00-.638-.234.618.618 0 00-.215.761c.063.147.69 1.446 3.315 1.446s3.25-1.299 3.313-1.446a.609.609 0 00-.201-.738z"
                       fill="#2C2C2C"></path>
                   </g>
-                </svg>
-              </div>
-              <div class="sign-in-text">
-                <a href="#" class="sign-in-link-style">Sign in</a>
+                </svg>Sign in</a>
               </div>
               <div class="sign-in-divisor">
                 <span class="sign-in-span2">|</span>
