--- a/index.html
+++ b/index.html
@@ -29,14 +29,16 @@
           </div>
           <div class="mar10-button-lr">
             <div class="l-btn-nav-controls">
-              <a class="l-btn-nav btn">&#10094;</a>
+              <a class="l-btn-nav btn"><svg width="18" height="18" viewBox="0 0 18 28" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" class="Icon__StyledSVG-lm07h6-0 kFGAmn Chevronstyles__ChevronIcon-sc-1qql32m-0 gxjmBc GlobalBannerstyles__ControlIcon-adnc4-6 dzgWcn" style="transform: scaleX(-1);">
+                <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path>
+              </svg></a>
             </div>
             <div class="mar10">
               <span class="mar10-day-sale">MAR10 Day Sale</span>
               <a href="#" class="mar10-shop-now">Shop now</a>
             </div>
             <div class="r-btn-nav-controls">
-              <a class="r-btn-nav btn">&#10095;</a>
+              <a class="r-btn-nav btn"><svg width="18" height="18" viewBox="0 0 18 28" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" class="Icon__StyledSVG-lm07h6-0 kFGAmn Chevronstyles__ChevronIcon-sc-1qql32m-0 gxjmBc GlobalBannerstyles__ControlIcon-adnc4-6 dzgWcn"><path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path></svg> </a>
             </div>
           </div>
           <div class="sign-in-box">
